Fixed issue, had to get rid of blurry effect :(

--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -267,9 +267,8 @@ to{border-right-color: transparent;}
   top: 0;
   right: 0;
   background: rgba(255, 255, 255, 0.1);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
 }
+
 #header.header-top .social-links, #header.header-top h2 {
   display: none;
 }
@@ -384,7 +383,7 @@ to{border-right-color: transparent;}
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.8);
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
